fixing package alignment

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -65,6 +65,7 @@ li {
   transition: background-size 0.3s;
   -webkit-transition: background-size 0.3s;
   line-height: 2;
+  padding-bottom: 30px;
 }
 
 .packages {
@@ -144,11 +145,12 @@ li {
 
 .price {
   position: absolute;
+
   font-weight: 400;
   font-size: 32px;
   left: 50%;
   transform: translate(-50%, -50%);
-  top: 75%;
+  top: 65%;
 }
 
 .spacer {
@@ -157,10 +159,8 @@ li {
 
 .select-button {
   position: absolute;
-  padding-top: -30px;
   left: 50%;
   transform: translate(-50%, -50%);
-
   bottom: 0;
 }
 
